# utnfrgpprogramacion2

./: .gitignore  clasesabstractas  clasesvirtuales.cpp  clasesvirtuales2.cpp  excepciones1.cpp  funcionesamigas2.cpp  polimorfismo.cpp  polimorfismo1.cpp  sobrecarga.cpp
API/: main.cpp
Almacen/: Mariano.cpp  Producto.cpp  Producto.h  ProductosArchivo.cpp  ProductosArchivo.h  main.cpp
Brian_Actividad_20240829/: PR2 - TP Clase Fecha.md  fecha.cpp  fecha.h  funciones_amigas.cpp  main.cpp
Brian_Actividad_20240905/Actividad2/: CMakeLists.txt  Destornillador.h  Herramienta.cpp  Herramienta.h  Martillo.cpp  Martillo.h  TaladroPercutor.cpp
Depurador/: Depurador.cbp  Depurador.depend  depurador.cpp
Ejercicio Incrementador/: CMakeLists.txt  README.md  main.cpp
EjercicioCursosVirtuales/: CMakeLists.txt  README.md  main1.cpp  tabla_de_pruebas.xlsx
Guia de Ejercicios 7 Vectores/: README.md  ejercicio01.cpp  ejercicio02.cpp  ejercicio03.cpp
Herramientas/: Herramienta.cpp  Herramienta.h  main.cpp
Inmuebles/: Casa.cpp  Casa.h  Casaquinta.cpp  Casaquinta.h  Departamento.cpp  Departamento.h  Inmueble.cpp  Inmueble.h  Local.cpp  Local.h  Menu.cpp  Menu.h  README.md  Terreno.cpp  Terreno.h  main.cpp  tablas.xlsx
Kloster_Actividad_20240912/: Alumno.cpp  Alumno.h  cadena_sobrecarga.cpp  main.cpp
MateriasyNotas/: .gitignore  MateriasyNotas.cbp  MateriasyNotas.depend  MateriasyNotas.layout  README.md  main.cpp
PR2 - Guia de Ejercicios Funciones Vectores Matrices/: README.md  funciones.cpp  funciones.h  libreria_propia.h
Parcial/: Examen.cpp  Mariano.h  main.cpp
(+92 files in other folders)
